# mobility-scooter-web-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api-pr-applicationset.yaml  applicationset.yaml  apps.yaml  compose.yaml  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-applicationset.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: build_and_push_api.yaml  build_and_push_web.yaml  (+1 more)
.kube/: applicationset.yaml  apps.yaml  web.yaml
apps/video-worker/: .env.example  .gitignore  README.md  main.py  package.json  pyproject.toml
apps/video-worker/.kube/rabbitmq/: deployment.yaml  service.yaml
apps/video-worker/app/: main.py
apps/video-worker/config/: tasks.py
apps/video-worker/lib/: audio_detection.py  pose_estimation.py
apps/video-worker/src/: audio_detection.py  main.py  worker.py
apps/video-worker/src/config/: constants.py  tasks.py
apps/video-worker/src/constants/: tasks.py
apps/video-worker/src/db/: engine.py
apps/video-worker/src/lib/: audio_detection.py  db.py  format_time.py  kafka.py  pose_estimation.py  queue.py
apps/video-worker/src/scripts/: angle_calculation.py  audio_detection.py  pose_estimation.py  tasks.py
apps/video-worker/src/utils/: logger.py
http/: create-user-emailpass.http  create-user.http  healthcheck.http  login-user-emailpass.http  refresh-token.http
k8s/: api-pr.yaml  apps.yaml  pr.yaml  web-pr.yaml  web.yaml
manifests/: api.yaml
scripts/: generate-api-key.ts  migrate_process_table_from_delta.py  requirements.txt
src/: index.ts
tests/: healthcheck.test.ts  user.test.ts
(+293 files in other folders)
